exempl/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: application
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: handler # Имя обработчика внутри сервиса Network Load Balancer
    targetPort: 8080
  # Kubernetes-метки селектора, использованные в шаблоне Pods при создании объекта Deployment
  selector:
    app: hello
